fix: spacing adjustments on casino skeleton

--- a/src/app/shared/layout/skeleton/types/skeleton-casino/skeleton-casino.component.css
+++ b/src/app/shared/layout/skeleton/types/skeleton-casino/skeleton-casino.component.css
@@ -1,14 +1,14 @@
 .loading-listagem .slider {
     display: flex;
     flex-direction: column;
-    margin: 22px 0 0 0;
+    margin: 0;
 }
 
 .loading-listagem .slider .title {
     display: flex;
     justify-content: space-between;
     height: 27px;
-    margin: 10px 0;
+    margin: 18px 0;
 }
 
 .loading-listagem .slider > .title .left {
